# RemeLearning

./: .gitignore  Plan.md  README.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
Phase/: Phase-0.md  Phase-1.md  Phase-2.md  Phase-3.md  Phase-4.md  Phase-5.md  Phase-6.md  Phase-7.md  Phase-8.md
RemeLearning/: .env.example  docker-compose.yml  pom.xml
RemeLearning/common/: README.md  pom.xml
RemeLearning/services/ai-service/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
RemeLearning/services/ai-service/app/: config.py  main.py
RemeLearning/services/ai-service/app/align/: sentence_aligner.py
RemeLearning/services/ai-service/app/analysis/: base.py  factory.py  rule_based_analyzer.py  scoring_engine_analyzer.py
RemeLearning/services/ai-service/app/api/: routes.py
RemeLearning/services/ai-service/app/clients/: user_service_client.py
RemeLearning/services/ai-service/app/db/: models.py  repository.py  session.py
RemeLearning/services/ai-service/app/face/: base.py  enrollment.py  insightface_engine.py  pipeline.py
RemeLearning/services/ai-service/app/kafka/: consumer.py  producer.py  topics.py
RemeLearning/services/ai-service/app/kafka/handlers/: analysis_requested.py  recording_uploaded.py
RemeLearning/services/ai-service/app/pronunciation/: arpabet_ipa.py  g2p.py  gop_model.py  gop_scorer.py  service.py
RemeLearning/services/ai-service/app/schemas/: align.py  events.py  pronunciation.py  tts.py
RemeLearning/services/ai-service/app/scoring/: engine.py  fit.py  models.py
RemeLearning/services/ai-service/app/storage/: s3_client.py
RemeLearning/services/ai-service/app/stt/: audio_convert.py  base.py  diarization.py  pipeline.py  whisper_engine.py
RemeLearning/services/ai-service/app/tts/: base.py  supertonic_engine.py
RemeLearning/services/ai-service/app/vision/: base.py  frame_extractor.py  gemini_vision_engine.py  pipeline.py
RemeLearning/services/ai-service/app/voice_auth/: base.py  heuristic_analyzer.py  pipeline.py
RemeLearning/services/ai-service/migrations/: env.py
RemeLearning/services/ai-service/migrations/versions/: 0001_initial_ai_schema.py
RemeLearning/services/ai-service/tests/: test_audio_convert.py  test_face_matching.py  test_fit_params.py  test_gop_scorer.py  test_pipeline.py  test_pronunciation_g2p.py  test_rule_based_analyzer.py  test_scoring_engine.py  test_sentence_aligner.py  test_tts_base.py  test_vision_pipeline.py  test_voice_auth_heuristic.py
RemeLearning/services/bff-service/: Dockerfile  README.md  openapi.yaml  pom.xml
RemeLearning/services/bff-service/src/main/resources/: application.yml
RemeLearning/services/dashboard-service/: Dockerfile  README.md  openapi.yaml  pom.xml
RemeLearning/services/dashboard-service/src/main/resources/: application.yml
RemeLearning/services/english-service/: README.md  openapi.yaml  pom.xml
RemeLearning/services/english-service/src/main/resources/: application.yml
RemeLearning/services/grammar-service/: Dockerfile  pom.xml
RemeLearning/services/grammar-service/src/main/resources/: application.yml
RemeLearning/services/pronunciation-service/: Dockerfile  pom.xml
RemeLearning/services/pronunciation-service/src/main/resources/: application.yml
RemeLearning/services/recommendation-service/: Dockerfile  README.md  openapi.yaml  pom.xml
RemeLearning/services/recommendation-service/src/main/resources/: application.yml
RemeLearning/services/recording-service/: Dockerfile  README.md  openapi.yaml  pom.xml
RemeLearning/services/recording-service/src/main/resources/: application.yml
RemeLearning/services/user-service/: README.md  openapi.yaml  pom.xml
RemeLearning/services/user-service/src/main/resources/: application.yml
RemeLearning/services/vocabulary-service/: Dockerfile  README.md  openapi.yaml  pom.xml
RemeLearning/services/vocabulary-service/src/main/resources/: application.yml
RemeLearning/src/main/resources/: application.properties
docs/: API.md
docs/flow/: ai-service-data-flow.md  bff-service-data-flow.md  dashboard-service-data-flow.md  english-service-data-flow.md  recommendation-service-data-flow.md  recording-service-data-flow.md  user-service-data-flow.md
docs/sequence/Ai_service/: analyze.md  enroll-face.md  health.md  overview.md  transcribe.md  upload.md
docs/sequence/Bff_service/: auth-proxy.md  history-retry-proxy.md  learner-overview.md  listening-speaking-library.md  overview.md  recording-upload-proxy.md  weak-points.md
docs/sequence/Dashboard_service/: get-dashboard-summary.md  learning-gap-analyzed.md  overview.md  recommendation-generated.md
docs/sequence/English_service/: dictation-practice.md  english-get-grammar-weak-points.md  english-get-pronunciation-weak-points.md  english-get-transcript.md  english-get-weak-points.md  english-learning-gap-analyzed-grammar.md  english-learning-gap-analyzed-pronunciation.md  english-learning-gap-analyzed.md  english-transcript-ready.md  grammar-learn.md  grammar-library.md  listening-learn.md  listening-library.md  overview.md  practice-redo.md  speaking-learn.md  speaking-library.md  vocabulary-learn.md  vocabulary-library.md
docs/sequence/Recommendation_service/: get-recommendations.md  learning-gap-analyzed.md  overview.md
docs/sequence/Recording_service/: get-by-id.md  get-by-user.md  overview.md  upload.md
docs/sequence/User_service/: get-profile.md  login.md  overview.md  photo-upload.md  register.md
docs/superpowers/plans/: 2026-07-20-dictation-history-detail.md  2026-07-21-ai-dictation-practice-enhancements.md  2026-07-22-vocabulary-library-sections.md  2026-07-23-listening-speaking-library.md  2026-07-24-history-retry.md  2026-07-24-loading-overlay.md
docs/superpowers/specs/: 2026-07-20-dictation-history-detail-design.md  2026-07-21-ai-dictation-practice-enhancements-design.md  2026-07-22-vocabulary-library-sections-design.md  2026-07-23-listening-speaking-library-design.md  2026-07-24-history-retry-design.md  2026-07-24-loading-overlay-design.md
(+648 files in other folders)
