[project]
name = "ai-service"
version = "0.1.0"
description = "Speech-to-text, diarization, and forgetting-pattern analysis service for RemeLearning"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiokafka>=0.11",
    "boto3>=1.35",
    "faster-whisper>=1.0",
    "pyannote.audio>=3.3",
    "torch>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
pythonpath = ["."]
