[project]
name = "ai-service"
version = "0.1.0"
description = "Speech-to-text, diarization, and forgetting-pattern analysis service for RemeLearning"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiokafka>=0.11",
    "boto3>=1.35",
    "httpx>=0.27",
    # Used by app/stt/audio_convert.py (container -> WAV) and app/vision/frame_extractor.py
    # (video -> sampled JPEG frames).
    "av>=12.0",
    "faster-whisper>=1.0",
    # Pinned exactly: pyannote.audio>=4.0 hardcodes a dependency on the gated
    # pyannote/speaker-diarization-community-1 model in SpeakerDiarization.__init__,
    # with no way to opt out via Pipeline.from_pretrained(). 3.4.0 doesn't need it.
    "pyannote.audio==3.4.0",
    # torch/torchaudio pinned together: torchaudio removed the old backend-dispatch API
    # (list_audio_backends, AudioMetaData, top-level info/load) that pyannote.audio 3.x
    # depends on; anything newer than ~2.2.x breaks pyannote.audio 3.4.0's app/stt/diarization.py.
    "torch==2.2.2",
    "torchaudio==2.2.2",
    # scipy>=1.13 requires numpy>=2, but torch/torchaudio 2.2.2 were built against numpy<2.
    "numpy<2",
    "scipy<1.13",
    # huggingface_hub>=0.26 dropped the use_auth_token kwarg that pyannote.audio 3.4.0 calls
    # internally (hf_hub_download(use_auth_token=...)).
    "huggingface_hub<0.26",
    # speechbrain 1.1.0 registers a lazy-import stub for speechbrain.integrations.k2_fsa that
    # crashes pytorch_lightning's inspect.stack() walk when the optional `k2` package isn't
    # installed - unrelated to whether k2 features are actually used. 1.0.3 predates this.
    "speechbrain==1.0.3",
    # Face detection + ArcFace embeddings for app/face/ (speaker identification). Pip-installable
    # (unlike face_recognition/dlib, no C++ build tools needed); downloads the buffalo_l model
    # pack on first run, same "pretrained model fetched at runtime" pattern as pyannote/whisper.
    # 1.0+ ships a pure-Python wheel (py3-none-any) - older 0.7.x is sdist-only on Windows and
    # needs MSVC Build Tools to compile its thirdparty/face3d cython extension (unrelated to
    # the detection/recognition path this service actually uses).
    "insightface>=1.0",
    "onnxruntime>=1.18",
    "opencv-python>=4.9",
    # Acoustic feature extraction (pitch/jitter/shimmer/spectral flatness) for the heuristic
    # human-vs-synthetic voice classifier in app/voice_auth/.
    "librosa>=0.10",
    # Persistence for app/db/ (schema "ai" in a new reme_ai Postgres database) - the Python
    # equivalent of the Java services' Flyway + MyBatis stack.
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    # On-device text-to-speech (app/tts/) for dictation AI-practice audio. 99M-param ONNX model,
    # runs on CPU (no GPU), 44.1kHz output - reuses the onnxruntime already pulled in by insightface.
    "supertonic>=0.1",
    # Speaking/pronunciation GOP scoring (app/pronunciation/), gated by PRONUNCIATION_ENABLED
    # (default false - see app/config.py). g2p_en: pure-Python grapheme-to-phoneme, no system
    # `espeak-ng` dependency (deliberate stage-1 choice - see app/pronunciation/g2p.py's docstring
    # for the phonemizer/espeak-ng upgrade path). transformers: loads
    # facebook/wav2vec2-lv-60-espeak-cv-ft for the acoustic side.
    # Pinned tight: transformers>=4.39 requires tokenizers>=0.19, but huggingface_hub<0.26 (pinned
    # above for pyannote.audio) only ships tokenizers<0.19-compatible releases up to
    # huggingface_hub 0.25.2's own tokenizers ceiling - transformers 4.38.2 + tokenizers 0.15.2 is
    # the newest combination verified to coexist with the pyannote.audio/huggingface_hub<0.26 pin
    # without any package needing an upgrade. Bump only together with a re-check of both ceilings.
    "transformers==4.38.2",
    "tokenizers>=0.14,<0.19",
    "g2p_en>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
# migrations/ (Alembic scripts, not an importable package) would otherwise be picked up
# alongside app/ as a second top-level package, which setuptools' flat-layout auto-discovery
# refuses to do implicitly.
include = ["app*"]
